version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLCoordinateSystemData.rst.txt
.. vale off



:class:`MAPDLCoordinateSystemData`
==================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLCoordinateSystemData(id: int, obj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLCoordinateSystemData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SystemId`
            - Gets the System Id for the coordinate system.







Property detail
---------------
.. py:property:: SystemId
   :type: Optional[int]


   
   Gets the System Id for the coordinate system.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on